rest-api: rest-gen, use `default` and `required` properties
